<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.basada.banksampah.ui.viewmodel.VerifyViewModel" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_verify"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16sp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="Isi Data Diri"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/titleBar"
            android:background="@color/colorBackground"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_nama_lengkap"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNamaLengkap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.fullNameText}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/data_no_hp"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNoHp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={viewModel.phoneNumberText}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/data_alamat"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.addressText}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/data_tanggal_lahir"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtDateofbirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:onClick="@{() -> viewModel.dateOfBirthOnClick()}"
                        android:text="@={viewModel.dateOfBirth}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/data_kota"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtKota"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.cityText}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/data_provinsi"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtProvinsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.provinceText}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/data_kodepos"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtKodePos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={viewModel.postcodeText}" />

                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    style="@style/Progressbar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:visibility="@{viewModel.loadingEnabled ? View.VISIBLE : View.GONE}"
                    tools:visibility="gone" />

                <Button
                    android:id="@+id/btn_changeProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.verify()}"
                    android:padding="10dp"
                    android:text="@string/simpan"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:visibility="@{viewModel.loadingEnabled ? View.GONE : View.VISIBLE}" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>
