<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_marginStart="8dp"
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Ubah Profil"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_toEndOf="@id/arrow"
            android:layout_marginStart="16sp"
            />

        <Button
            android:id="@+id/btn_changePassword"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ubah_password"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:gravity="center"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@id/actionBar"
        android:background="@color/colorBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/shape"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profil_nama">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fahturrahman Fauzi"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_login_email"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="fahtur@gmail.com"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:id="@+id/btn_changeProfile"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:fontFamily="sans-serif"
                android:textSize="15sp"
                android:gravity="center"
                />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>



