<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.banksampah.ui.viewmodel.RequestViewModel" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvnama_sampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Plastik Kresek"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_bukti_sampah"
            android:layout_width="172dp"
            android:layout_height="172dp"
            android:layout_below="@id/btn_tambahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.btnUploadOnClick() }"
            android:src="@android:color/darker_gray"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvnama_sampah"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Pilih File" />

        <TextView
            android:id="@+id/tvharga_sampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_upload"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Rp. 1,000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvharga_sampah"
            android:layout_toRightOf="@id/tvharga_sampah"
            android:text="Kg"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvjumlah_estimasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvharga_sampah"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="Jumlah Estimasi Kg" />

        <LinearLayout
            android:id="@+id/ll_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvjumlah_estimasi"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_tambah"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:text="@string/tombol_tambah"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_jumlah_estimasi"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:hint="@string/estimasi"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_kurang"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:text="@string/tombol_kurang"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_tambahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_dialog"
            android:layout_marginTop="16dp"
            android:text="@string/btn_tambah" />

    </RelativeLayout>

</layout>